# 2026DRL_HW3DQN

./: .gitignore  HW3_1_report.md  HW3_2_report.md  HW3_3_report.md  HW3_4_report.md  LICENSE  README.md  chatlog.md  chatlog2.md  chatlog3.md  chatlog4.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-04-30-hw3-dqn-stage1-implementation.md  2026-05-01-hw3-dqn-stage2-implementation.md  2026-05-06-hw3-dqn-stage3-implementation.md  2026-05-06-hw3-dqn-stage4-implementation.md
docs/superpowers/specs/: 2026-04-30-hw3-dqn-stage1-design.md  2026-05-01-hw3-dqn-stage2-design.md  2026-05-06-hw3-dqn-stage3-design.md  2026-05-06-hw3-dqn-stage4-design.md
results/HW3-1/naive_static/: checkpoint.pth  losses.npy  metrics.json
results/HW3-1/replay_random/: checkpoint.pth  losses.npy  metrics.json
results/HW3-1/replay_static/: checkpoint.pth  losses.npy  metrics.json
results/HW3-2/combined_player/: checkpoint.pth  losses.npy  metrics.json
results/HW3-2/double_player/: checkpoint.pth  losses.npy  metrics.json
results/HW3-2/dueling_player/: checkpoint.pth  losses.npy  metrics.json
results/HW3-2/replay_player/: checkpoint.pth  losses.npy  (+1 more)
src/: animate.py  dqn_double.py  dqn_double_dueling.py  dqn_dueling.py  dqn_lightning.py  dqn_naive.py  dqn_replay.py  gridboard.py  gridworld_env.py  model.py  rainbow.py  utils.py
tests/: test_animate.py  test_dqn_double.py  test_dqn_double_dueling.py  test_dqn_dueling.py  test_dqn_lightning.py  test_dqn_naive.py  test_dqn_replay.py  test_gridworld.py  test_model.py  test_model_dueling.py  test_rainbow.py  test_utils.py
(+282 files in other folders)
